--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -1,4 +1,5 @@
-name: hola-mundo
+name: Aprendiendo Github Actions
+run-name: ¡Estoy aprendiendo Github Actions!
 on: [push]
 jobs:
   hola-mundo:
@@ -6,9 +7,9 @@ jobs:
     steps:
       - name: check-out repository
         uses:  actions/checkout@v4
-      - name: set up puthon
+      - name: set up python
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12' 
-      - run: python ../hello_git_actions.py
+      - run: python hello_git_actions.py
         
