--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -8,7 +8,7 @@ jobs:
       - name: check-out repository
         uses:  actions/checkout@v4
       - name: set up python
-      - uses: actions/setup-python@v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12' 
       - run: python hello_git_actions.py
